# py-wwpdb_apps_releasemodule

./: .gitignore  README.md  azure-pipelines.yml  azure-template-tox-job.yml  pylintrc  requirements.txt  setup.cfg  setup.py  tox.ini
wwpdb/apps/releasemodule/: __init__.py
wwpdb/apps/releasemodule/citation/: Analysis.py  CheckResult.py  CitationFinder.py  FetchMP.py  FetchResultParser.py  FetchUtil.py  MatchMP.py  MatchUtil.py  MonitorCitationUpdate.py  ReadCitationFinderResult.py  ReadCitationFinderResult_v2.py  RisCitationParser.py  SearchMP.py  SearchResultParser.py  SearchUtil.py  StringUtil.py
wwpdb/apps/releasemodule/depict/: Depict.py  DepictAnnotatorHistory.py  DepictBase.py  DepictCitation.py  DepictCitationForm.py  DepictCitationForm_v2.py  DepictCitation_v2.py  DepictEntryHistory.py  DepictReleaseInfo.py  DepictRemovalMark.py  DepictRequest.py  ReleaseOption.py  ReleaseOption_v2.py  test_Depict.py  test_DepictCitation.py
wwpdb/apps/releasemodule/update/: ArchiveFileUtil.py  AutoReRelease.py  CheckMP.py  CheckUtil.py  Cif2EmdDialectConvertor.py  CitationFormParser.py  CitationFormParser_v2.py  EmReleaseUtil.py  Emd2XmlTranslator.py  EntryFormParser_v2.py  EntryPullProcess.py  EntryUpdateBase.py  EntryUpdateProcess.py  FormParser.py  GenerateMP.py  GenerateUtil.py  GzipMP.py  GzipUtil.py  InputFormParser.py  InputFormParser_v2.py  MultiUpdateProcess.py  NmrDataGenerator.py  ReleaseDpUtil.py  ReleaseUtil.py  UpdateBase.py  (+10 more)
wwpdb/apps/tests-releasemodule/: CitationTests.py  ImporterTests.py  MultiProcLimitTest.py  MultiProcLimitTests.py  commonsetup.py
(+35 files in other folders)
