[bdist_wheel]
# use py2.py3 tag for pure-python dist:
universal=1

[metadata]
description_file = README.md

[flake8]
per-file-ignores =
		 wwpdb/apps/releasemodule/depict/ReleaseOption_v2.py: E201,E202,E241
		 wwpdb/apps/releasemodule/depict/DepictBase.py: E201,E202,E241
		 wwpdb/apps/releasemodule/utils/ContentDbApi.py: E131,E501
		 wwpdb/apps/releasemodule/utils/ModuleBaseClass.py: E201,E202,E241
		 wwpdb/apps/releasemodule/update/UpdateFormParser.py: E201,E202,E241
		 wwpdb/apps/releasemodule/update/EmReleaseUtil.py: E201,E202,E241